# slideslive-sessions

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  auth.py  capture.py  pyproject.toml  slides.py  summarize.py  transcribe.py
.claude/: settings.local.json
src/slideslive_sessions/: auth.py  capture.py  slides.py  summarize.py  transcribe.py
