[project]
name = "neurips-sessions"
version = "0.1.0"
description = "Capture slides, video, and AI-generated notes from NeurIPS sessions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Pete" },
]
keywords = ["neurips", "machine-learning", "conference", "slides", "transcription", "notes"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "playwright>=1.40.0",
    "yt-dlp>=2024.1.1",
    "myslideslive>=0.1.0",
    "faster-whisper>=1.0.0",
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
]

[project.urls]
Repository = "https://github.com/pdtgct/neurips-sessions"
Issues = "https://github.com/pdtgct/neurips-sessions/issues"

[project.scripts]
neurips-capture = "capture:main"
neurips-auth = "auth:main"
neurips-transcribe = "transcribe:main"
neurips-summarize = "summarize:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]

[tool.ruff]
line-length = 100
